[gd_scene load_steps=7 format=3 uid="uid://syly166ddjcr"]

[ext_resource type="FontFile" uid="uid://bo8csdsex1d3i" path="res://assets/fonts/AmaticSC-Bold.ttf" id="1_hhy0g"]
[ext_resource type="Script" path="res://scripts/login_screen.gd" id="1_p6odj"]
[ext_resource type="FontFile" uid="uid://bceo6mdndisde" path="res://assets/fonts/Roboto-Bold.ttf" id="3_y3fwr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okqh2"]
bg_color = Color(0.988235, 0.831373, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6332v"]
bg_color = Color(0.988235, 0.831373, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xegu"]
bg_color = Color(0.596078, 0.392157, 0.0156863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6odj")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 121.0
offset_right = 446.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("1_hhy0g")
theme_override_font_sizes/font_size = 100
text = "Caminos de Empatía"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.963
anchor_top = 0.5
anchor_right = 0.963
anchor_bottom = 0.5
offset_left = 0.039917
offset_right = 0.039917
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.061
anchor_top = 0.505
anchor_right = 0.061
anchor_bottom = 0.505
offset_left = -0.12001
offset_top = -0.400024
offset_right = 392.88
offset_bottom = 128.6

[node name="UsernameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y3fwr")
theme_override_font_sizes/font_size = 22
text = "Usuario"

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y3fwr")
theme_override_font_sizes/font_size = 20
placeholder_text = " "

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y3fwr")
theme_override_font_sizes/font_size = 22
text = "Contraseña"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y3fwr")
theme_override_font_sizes/font_size = 20
placeholder_text = " "
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.673
anchor_right = 0.03
anchor_bottom = 0.673
offset_left = 58.4
offset_top = -11.84
offset_right = 451.4
offset_bottom = 33.16

[node name="QuitButton" type="Button" parent="HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_y3fwr")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_okqh2")
theme_override_styles/hover = SubResource("StyleBoxFlat_6332v")
theme_override_styles/normal = SubResource("StyleBoxFlat_8xegu")
text = "Entrar"

[node name="QuitButton2" type="Button" parent="HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_y3fwr")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_okqh2")
theme_override_styles/hover = SubResource("StyleBoxFlat_6332v")
theme_override_styles/normal = SubResource("StyleBoxFlat_8xegu")
text = "Nuevo Usuario"

[node name="QuitButton3" type="Button" parent="."]
z_index = 1
layout_mode = 2
offset_left = 121.0
offset_top = 829.0
offset_right = 315.0
offset_bottom = 874.0
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_y3fwr")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_okqh2")
theme_override_styles/hover = SubResource("StyleBoxFlat_6332v")
theme_override_styles/normal = SubResource("StyleBoxFlat_8xegu")
text = "Salir"

[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton2" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="QuitButton3" to="." method="_on_quit_button_pressed"]
